2025-03-31  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Roll micro version and date
	* inst/include/Rcpp/config.h: Idem

2025-03-29 Iñaki Ucar <iucar@fedoraproject.org>

	* inst/include/Rcpp/traits/result_of.h: Reimplement traits::result_of using
	std::result_of (up to C++14) or std::invoke_result (C++17 or later), which
	supports previous use cases and enables lambdas
	* inst/include/Rcpp/sugar/functions/sapply.h: Use new result_of interface
	* inst/include/Rcpp/sugar/functions/lapply.h: Idem
	* inst/include/Rcpp/sugar/functions/mapply/mapply_2.h: Idem
	* inst/include/Rcpp/sugar/functions/mapply/mapply_3.h: Idem
	* inst/include/Rcpp/sugar/matrix/outer.h: Idem
	* inst/tinytest/cpp/sugar.cpp: New tests for previous sugar functions
	* inst/tinytest/test_sugar.R: Idem

2025-03-26  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Roll micro version and date
	* inst/include/Rcpp/config.h: Idem

2025-03-26 Iñaki Ucar <iucar@fedoraproject.org>

	* inst/include/Rcpp/platform/compiler.h: Remove definitions of
	RCPP_USING_UNORDERED_MAP and RCPP_USING_UNORDERED_SET
	* inst/include/Rcpp/sugar/sets.h: Remove redefinition of macros
	* inst/include/Rcpp/sugar/functions/self_match.h: Replace macros with
	std::unordered_map and std::unordered_set respectively
	* inst/include/Rcpp/sugar/functions/setdiff.h: Idem
	* inst/include/Rcpp/sugar/functions/table.h: Idem
	* inst/tinytest/cpp/wrap.cpp: Idem

2025-03-24  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Roll micro version and date
	* inst/include/Rcpp/config.h: Idem

2025-03-24  Iñaki Ucar  <iucar@fedoraproject.org>

	* inst/include/Rcpp/exceptions.h: Include C+11 variadic template definitions
	unconditionally
	* inst/include/Rcpp/exceptions/cpp11/exceptions.h: Removed
	* inst/include/Rcpp/exceptions/cpp98/exceptions.h: Idem

	* src/attributes.cpp: Remove obsolete pre-C+11 paths based on __cplusplus
	define checks
	* inst/tinytest/cpp/sugar.cpp: Idem